--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -9,3 +9,10 @@
 }
 
 
+.ellipsis { overflow:hidden; white-space:nowrap; -o-text-overflow:ellipsis; text-overflow:ellipsis;}
+
+.clearfix:after { content:"."; display:block; height:0; clear:both; visibility:hidden; }
+.clearfix { display:inline-block; }
+* html .clearfix { height:1%; }
+.clearfix{ display:block; }
+
